--- a/style.css
+++ b/style.css
@@ -50,21 +50,24 @@ header > .-laptop > ul > li {
 }
 
 header > .-phone {
+	position: absolute;
 	pointer-events: none;
 	opacity: 0;
 	display: none;
 	transition: .2s ease;
+	margin-left: 1em;
+	margin-top: 1em;
+	background: #F1652266;
+	padding: 1em;
+	border-radius: 50%;
+	height: 3em;
 }
 
 header > .-phone > a > img {
-	height: 4em;
-	background: #000c;
-	padding: .5em;
-	margin-left: 1em;
-	margin-top: 1em;
-	border-radius: 5px;
+	height: 3em;
 	z-index: 999;
 	position: relative;
+	left: 3px;
 }
 
 #page-content {
@@ -543,6 +546,7 @@ h2 {
 	}
 
 	#nsec2 > .-content {
+		padding-bottom: .5em;
 	}
 
 	#nsec2 > .-phone {
@@ -570,7 +574,7 @@ h2 {
 
 	#nsec2 > .-phone {
 		height: 10.5em;
-		bottom: 6em;
+		bottom: 9em;
 		right: 0;
 	}
 
@@ -585,6 +589,19 @@ h2 {
 }
 
 @media screen and (max-width: 500px) {
+	#nsec2 {
+		background-position: 70% 50px;
+	}
+
+	#nsec2 > .-content {
+		max-width: calc(100% - 4em);
+	}
+
+	#nsec2 > .-phone {
+		bottom: 15em;
+		height: 8em;
+	}
+
 	#nsec3 > .-heading, #nsec4 > .-heading {
 		max-width: unset;
 		box-sizing: border-box;
