--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header > .-phone {
 	margin-left: 1em;
 	margin-top: 1em;
 	background: #F1652266;
-	padding: 1em;
+	padding: .75em;
 	border-radius: 50%;
 	height: 3em;
 }
