--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header > .-phone {
 	transition: .2s ease;
 	margin-left: 1em;
 	margin-top: 1em;
-	background: #F1652266;
+	background: #fff7;
 	padding: .75em;
 	border-radius: 50%;
 	height: 3em;
@@ -171,8 +171,8 @@ header > .-phone > a > img {
 #nsec2 > .-content {
 	position: absolute;
 	bottom: 1.25em;
-	left: -1em;
-	padding: .5em 1.75em 1.5em 1.25em;
+	margin-left: -3em;
+	padding: .5em 1.75em 1.5em 4.25em;
 	max-width: 450px;
 	background: rgba(65, 65, 65, .5);
 	color: white;
@@ -602,11 +602,12 @@ h2 {
 
 @media screen and (max-width: 500px) {
 	#nsec2 > .-content, #nsec3 > .-content {
-		max-width: calc(100% - 4em);
+		max-width: calc(100% - 10em);
 	}
 
 	#nsec2 > .-phone {
 		bottom: 15em;
+		margin-right: -1em;
 		height: 8em;
 	}
 
