--- a/style.css
+++ b/style.css
@@ -574,7 +574,7 @@ h2 {
 		left: 1em;
 	}
 
-	#nsec2 {
+	#nsec2, #nsec3 {
 		background-position: 70% 50px, 50% 50%;
 	}
 
@@ -601,13 +601,18 @@ h2 {
 }
 
 @media screen and (max-width: 500px) {
+	#nsec2, #nsec3 {
+		min-height: 450px;
+		background-position: 70% 0, 50% 50%;
+	}
+
 	#nsec2 > .-content, #nsec3 > .-content {
 		max-width: calc(100% - 10em);
-		bottom: 3em;
+		bottom: 4em;
 	}
 
 	#nsec2 > .-phone {
-		bottom: 10em;
+		bottom: 12em;
 		margin-right: -1em;
 	}
 
