--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header > .-phone > a > img {
 	border: solid #0000;
 	border-width: 2px 2px 0 0;
 	border-radius: 0 5px 5px 0;
-	text-align: justify;
+	text-align: right;
 	font-size: 1.38em;
 	transform: skewX(-10deg);
 }
@@ -231,7 +231,7 @@ header > .-phone > a > img {
 	border: solid #0000;
 	border-width: 2px 0 0 2px;
 	border-radius: 5px 0 0 5px;
-	text-align: justify;
+	text-align: left;
 	font-size: 1.38em;
 	transform: skewX(10deg);
 }
@@ -295,7 +295,7 @@ header > .-phone > a > img {
 	border: solid #0000;
 	border-width: 2px 2px 0 0;
 	border-radius: 0 5px 5px 0;
-	text-align: justify;
+	text-align: right;
 	font-size: 1.38em;
 	transform: skewX(-10deg);
 }
@@ -339,7 +339,7 @@ header > .-phone > a > img {
 	border: solid #0000;
 	border-width: 2px 0 0 2px;
 	border-radius: 5px 0 0 5px;
-	text-align: justify;
+	text-align: left;
 	font-size: 1.38em;
 	transform: skewX(10deg);
 }
