--- a/style.css
+++ b/style.css
@@ -168,10 +168,11 @@ header > .-phone > a > img {
 
 #nsec2 {
 	position: relative;
-	background: url(res/img12-3-2.png), url(res/white.png);
-	background-size: contain, cover;
-	background-repeat: no-repeat, no-repeat;
-	background-position: 70% 50%, 50% 50%;
+	background: url(res/img12-3-3.png), url(res/white50.png), url(res/background4.jpeg);
+	background-attachment: scroll, scroll, fixed;
+	background-size: contain, cover, cover;
+	background-repeat: no-repeat, no-repeat, no-repeat;
+	background-position: 70% 50%, 50% 50%, 50% 50%;
 	min-height: 500px;
 	text-align: center;
 	overflow: hidden;
@@ -191,6 +192,7 @@ header > .-phone > a > img {
 	text-align: right;
 	font-size: 1.38em;
 	transform: skewX(-10deg);
+	/*backdrop-filter: blur(5px);*/
 }
 
 #nsec2 > .-content > p > span {
@@ -243,6 +245,7 @@ header > .-phone > a > img {
 	text-align: left;
 	font-size: 1.38em;
 	transform: skewX(10deg);
+	/*backdrop-filter: blur(5px);*/
 }
 
 #nsec3 > .-content > p > span {
@@ -307,6 +310,7 @@ header > .-phone > a > img {
 	text-align: right;
 	font-size: 1.38em;
 	transform: skewX(-10deg);
+	/*backdrop-filter: blur(5px);*/
 }
 
 #nsec4 > .-content > p > span {
@@ -351,6 +355,7 @@ header > .-phone > a > img {
 	text-align: left;
 	font-size: 1.38em;
 	transform: skewX(10deg);
+	/*backdrop-filter: blur(5px);*/
 }
 
 #nsec5 > .-content > p > span {
@@ -570,7 +575,7 @@ h2 {
 	}
 
 	#nsec2 {
-		background-position: 70% -100px, 50% 50%;
+		background-position: 70% -100px, 50% 50%, 50% 50%;
 	}
 
 	#nsec3 {
@@ -632,7 +637,7 @@ h2 {
 	}
 
 	#nsec2 {
-		background-position: 70% 50px, 50% 50%;
+		background-position: 70% 50px, 50% 50%, 50% 50%;
 	}
 
 	#nsec3 {
@@ -679,7 +684,7 @@ h2 {
 
 	#nsec2 {
 		min-height: 450px;
-		background-position: 70% 0, 50% 50%;
+		background-position: 70% 0, 50% 50%, 50% 50%;
 	}
 
 	#nsec3 {
