--- a/style.css
+++ b/style.css
@@ -127,14 +127,12 @@ header > .-phone > a > img {
 	left: 3em;
 	transform: translateY(-75%);
 	text-align: left;
-	width: calc(100% - 2em);
 	margin-top: 1em;
 }
 
 #nsec1 > .-content > .-c2 {
 	position: absolute;
 	bottom: 1em;
-	width: calc(100% - 2em);
 	margin-top: 1em;
 }
 
@@ -784,6 +782,10 @@ h2 {
 
 	#nsec1 > .-content > .-c2 {
 		font-size: .65em;
+	}
+
+	#nsec4 > .-content {
+		max-width: calc(100% - 6em);
 	}
 }
 
