--- a/style.css
+++ b/style.css
@@ -786,6 +786,10 @@ h2 {
 		font-size: .65em;
 	}
 
+	#nsec2 > .-covermsg {
+		background-position: 70% -60px, 50% 50%;
+	}
+
 	#nsec4 > .-content {
 		max-width: calc(100% - 6em);
 	}
