--- a/style.css
+++ b/style.css
@@ -672,15 +672,15 @@ h2 {
 	}
 
 	#nsec2 {
-		min-height: 375px;
+		min-height: 400px;
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -75px, 50% 50%;
+		background-position: 70% -50px, 50% 50%;
 	}
 
 	#nsec3 {
-		min-height: 375px;
+		min-height: 400px;
 		background-position: 35% -50px, 50% 50%;
 	}
 
@@ -728,11 +728,11 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -40px, 50% 50%;
+		background-position: 70% -15px, 50% 50%;
 	}
 
 	#nsec3 {
-		background-position: 35% 0, 50% 50%;
+		background-position: 35% -15px, 50% 50%;
 	}
 
 	#nsec4 {
@@ -787,7 +787,11 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -60px, 50% 50%;
+		background-position: 70% -35px, 50% 50%;
+	}
+
+	#nsec3 {
+		background-position: 70% -35px, 50% 50%;
 	}
 
 	#nsec4 > .-content {
