--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ header > .-phone > a > img {
 	text-align: center;
 	overflow: hidden;
 	background: url(res/background4-1.png);
-	background-position: 50% 50%;
 	background-size: cover;
+	background-position: 50% 50%;
 }
 
 #nsec2 > .-coverbg {
@@ -230,7 +230,7 @@ header > .-phone > a > img {
 
 #nsec2 > .-content > p > span {
 	transform: skewX(10deg);
-	margin-left: .1em;
+	margin-left: .125em;
 }
 
 #nsec2 > .-phone {
@@ -414,19 +414,6 @@ header > .-phone > a > img {
 	overflow-x: hidden;
 }
 
-/*#nsecrev > .-reviews {
-	white-space: nowrap;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	position: relative;
-	border-radius: 5px;
-	transition: 1s linear;
-}
-
-#nsecrev > .-reviews > .splide__track > .splide__list > .-review {
-	display: inline-block;
-}*/
-
 .splide__pagination__page.is-active {
 	background: #000!important;
 }
@@ -440,7 +427,9 @@ header > .-phone > a > img {
 }
 
 #nsecrev > .-reviews > .splide__track > .splide__list > .-review > div > .-user {
-	margin-right: 1em;
+	margin-right: .75em;
+	padding-right: .75em;
+	border-right: 1px solid var(--orange-one);
 }
 
 #nsecrev > .-reviews > .splide__track > .splide__list > .-review > div > .-user > img {
