--- a/style.css
+++ b/style.css
@@ -243,13 +243,20 @@ header > .-phone > a > img {
 
 #nsec3 {
 	position: relative;
-	background: url(res/img13.png), url(res/white.png);
-	background-size: contain, cover;
-	background-repeat: no-repeat, no-repeat;
-	background-position: 45% 50%, 50% 50%;
+	background: #fff;
 	min-height: 500px;
 	text-align: center;
 	overflow: hidden;
+}
+
+#nsec3 > .-covermsg {
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+	background: url(res/img13.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 45% 50%;
+	background-attachment: scroll;
 }
 
 #nsec3 > .-heading {
@@ -296,13 +303,23 @@ header > .-phone > a > img {
 
 #nsec4 {
 	position: relative;
-	background: url(res/img15-1.png), url(res/background2.jpeg);
-	background-size: contain, cover;
-	background-position: 70% 50%, 10% 50%;
-	background-repeat: no-repeat, no-repeat;
+	background: url(res/background2.jpeg);
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
 	min-height: 500px;
 	text-align: center;
 	overflow: hidden;
+}
+
+#nsec4 > .-covermsg {
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+	background: url(res/img15-1.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 70% 50%;
+	background-attachment: scroll;
 }
 
 #nsec4 > .-heading {
@@ -579,15 +596,15 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -100px, 50% 50%;
+		background-position: 70% -100px;
 	}
 
-	#nsec3 {
-		background-position: 35% -50px, 50% 50%;
+	#nsec3 > .-covermsg {
+		background-position: 35% -50px;
 	}
 
-	#nsec4 {
-		background-position: 70% -100px, 50% 50%;
+	#nsec4 > .-covermsg {
+		background-position: 70% -100px;
 	}
 }
 
@@ -617,11 +634,11 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -100px, 50% 50%;
+		background-position: 70% -100px;
 	}
 
-	#nsec3 {
-		background-position: 35% -100px, 50% 50%;
+	#nsec3 > .-covermsg {
+		background-position: 35% -100px;
 	}
 
 	#nsec2 > .-content, #nsec3 > .-content, #nsec4 > .-content, #nsec5 > .-content {
@@ -650,11 +667,11 @@ h2 {
 
 @media screen and (max-width: 700px) {
 	#nsec2 > .-covermsg {
-		background-position: 70% -50px, 50% 50%;
+		background-position: 70% -50px;
 	}
 
-	#nsec3 {
-		background-position: 35% -50px, 50% 50%;
+	#nsec3 > .-covermsg {
+		background-position: 35% -50px;
 	}
 }
 
@@ -668,17 +685,23 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -50px, 50% 50%;
+		background-position: 70% -50px;
 	}
 
 	#nsec3 {
 		min-height: 400px;
-		background-position: 35% -50px, 50% 50%;
+	}
+
+	#nsec3  > .-covermsg {
+		background-position: 35% -50px;
 	}
 
 	#nsec4 {
 		min-height: 275px;
-		background-position: 70% -75px, 50% 50%;
+	}
+
+	#nsec4 > .-covermsg {
+		background-position: 70% -75px;
 	}
 
 	#nsec2 > .-content, #nsec4 > .-content {
@@ -720,15 +743,15 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -15px, 50% 50%;
+		background-position: 70% -15px;
 	}
 
-	#nsec3 {
-		background-position: 35% -15px, 50% 50%;
+	#nsec3 > .-covermsg {
+		background-position: 35% 0;
 	}
 
-	#nsec4 {
-		background-position: 70% -50px, 50% 50%;
+	#nsec4 > .-covermsg {
+		background-position: 70% -50px;
 	}
 
 	#nsec5 {
@@ -779,11 +802,11 @@ h2 {
 	}
 
 	#nsec2 > .-covermsg {
-		background-position: 70% -35px, 50% 50%;
+		background-position: 70% -35px;
 	}
 
-	#nsec3 {
-		background-position: 70% -35px, 50% 50%;
+	#nsec3 > .-covermsg {
+		background-position: 70% 25px;
 	}
 
 	#nsec4 > .-content {
